--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -1,5 +1,5 @@
 // Importing Google Fonts
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap');
 
 //------GENERAL SETTINGS -------------------------------
 
@@ -20,13 +20,15 @@ header {
 // Define color variables
 $colors: (
   //-------- PRIMARY ----------------------------
-  'soft-orange': hsl(35, 77%, 62%),
-  'soft-red': hsl(5, 85%, 63%),
+  'soft-red': hsl(10, 79%, 65%),
+  'cyan': hsl(186, 34%, 60%),
+  
   //-------- NEUTRAL ----------------------------
-  'off-white': hsl(36, 100%, 99%),
-  'grayish-blue': hsl(233, 8%, 79%),
-  'dark-grayish-blue': hsl(236, 13%, 42%),
-  'very-dark-blue': hsl(240, 100%, 5%),
+ 'dark-brown': hsl(25, 47%, 15%),
+  'medium-brown': hsl(28, 10%, 53%),
+ 'cream': hsl(27, 66%, 92%),
+  'very-pale-orange': hsl(33, 100%, 98%),
+  
   //--------STANDARD ---------------------------
   'white': hsl(0, 0%, 100%),
   'purple-transp': hsla(276, 77%, 7%, 0.2),
@@ -46,7 +48,7 @@ $gradientOne: linear-gradient(135deg, hsl(0, 0%, 100%), hsl(0, 100%, 98%));
 }
 //font-family: "Josefin Sans", sans-serif;
 // Typography Mixin with parameters
-@mixin typography($font-family: 'Inter', $weight, $size, $line-height, $color) {
+@mixin typography($font-family: 'DM Sans', $weight, $size, $line-height, $color) {
   font-family: 'Inter', sans-serif;
   font-weight: $weight;
   font-size: $size;
@@ -171,7 +173,7 @@ header {
     display: flex;
     justify-content: center;
     align-items: center;
-    @include typography('Josefin Sans', 400, 1rem, 2, color('white'));
+    @include typography('DM Sans', 400, 1rem, 2, color('white'));
     border: 1px solid color('white');
     //position:absolute;
     background-color: color('black-transp');
@@ -275,7 +277,7 @@ header {
     display: flex;
     margin-bottom: 1rem;
     h1 {
-      @include typography('Inter', 900, 2rem, 1.2, color('black'));
+      @include typography('DM Sans', 900, 2rem, 1.2, color('black'));
     }
   }
 
@@ -286,7 +288,7 @@ header {
     justify-content: space-between;
     //background-color: brown;
     p {
-      @include typography('Inter', 300, 1rem, 1.5, color('black'));
+      @include typography('DM Sans', 300, 1rem, 1.5, color('black'));
       margin-bottom: 2rem;
     }
   }
@@ -303,7 +305,7 @@ header {
     border-radius: 5px;
     border-style: none;
     text-align: center;
-    @include typography('Inter', 600, 1rem, 1.5, color('black'));
+    @include typography('DM Sans', 600, 1rem, 1.5, color('black'));
     transition: transform 0.7s ease;
     background-color: color('soft-red');
     //background-color: deeppink;
@@ -329,7 +331,7 @@ header {
   background-color: color('black');
   //background-color: chartreuse;
   &__newTitle {
-    @include typography('Inter', 600, 2rem, 1.5, color('soft-orange'));
+    @include typography('DM Sans', 600, 2rem, 1.5, color('soft-orange'));
     margin-bottom: 1rem;
   }
   &__newItem {
@@ -337,11 +339,11 @@ header {
   }
 
   h3 {
-    @include typography('Inter', 600, 1.5rem, 1.5, color('white'));
+    @include typography('DM Sans', 600, 1.5rem, 1.5, color('white'));
   }
 
   p {
-    @include typography('Inter', 400, 1rem, 1.5, color('grayish-blue'));
+    @include typography('DM Sans', 400, 1rem, 1.5, color('grayish-blue'));
   }
 
   hr {
@@ -376,15 +378,15 @@ header {
   }
   &__number {
     width: 100%;
-    @include typography('Inter', 800, 1.5rem, 1.5, color('soft-red'));
+    @include typography('DM Sans', 800, 1.5rem, 1.5, color('soft-red'));
   }
   &__title {
     width: 100%;
-    @include typography('Inter', 800, 1.2rem, 1.5, color('black'));
+    @include typography('DM Sans', 800, 1.2rem, 1.5, color('black'));
   }
   &__text {
     width: 100%;
-    @include typography('Inter', 400, 1rem, 1.5, color('dark-grayish-blue'));
+    @include typography('DM Sans', 400, 1rem, 1.5, color('dark-grayish-blue'));
   }
 }
 
@@ -413,7 +415,7 @@ header {
 @media (min-width: 1024px) {
   .navTop_container {
     max-width: 85rem;
-    margin:0 auto;
+    margin: 0 auto;
     &__navMenu {
       width: 30rem; // ✅ Adjust width to auto for desktop
       top: 0.5rem; // ✅ Reset top for desktop
@@ -428,7 +430,7 @@ header {
 
     li {
       border: none;
-      @include typography('Josefin Sans', 400, 1rem, 2, color('black'));
+      @include typography('DM Sans', 400, 1rem, 2, color('black'));
       background-color: transparent; //✅🚩this fixed it.
     }
 
@@ -442,8 +444,8 @@ header {
     display: grid;
     justify-content: center;
     //align-items: start;
-    align-content:flex-start;//🚩this was the solution to keep the grid attached to teh nav
-    margin:0 auto;
+    align-content: flex-start; //🚩this was the solution to keep the grid attached to teh nav
+    margin: 0 auto;
     grid-template-columns: repeat(3fr);
     grid-template-rows: repeat(4fr);
     grid-template-areas:
@@ -470,7 +472,7 @@ header {
   .heroImagePlusIntro__mainTitle {
     width: 90%;
     grid-area: title;
-    margin-right:1rem;
+    margin-right: 1rem;
   }
 
   .heroImagePlusIntro__textContent {
@@ -483,5 +485,4 @@ header {
 
     //background-color: chocolate;
   }
-  
 }
