--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap");
 *,
 *::before,
 *::after {
@@ -27,297 +27,211 @@ body {
   display: flex;
   flex-direction: column;
   min-height: 100vh;
-  justify-content: center;
-  z-index: 0;
+  background-color: hsl(27, 66%, 92%);
 }
 
-header {
+main {
   width: 100%;
+  height: 40rem;
   display: flex;
-  position: relative;
+  flex-direction: column;
+  align-items: center;
+  scroll-margin-bottom: 2rem;
+  flex: 1 0 auto; /* This allows the main content to grow and shrink but not shrink smaller than its content */
 }
 
-.navTop_container {
+.card {
+  width: 20rem;
+  height: 27rem;
+  display: flex;
+  flex-direction: column;
+  margin-top: 10rem;
+  border-radius: 10px;
+  margin-bottom: 2rem;
+}
+
+.myBalance {
   width: 100%;
   height: 5rem;
   display: flex;
-  flex-direction: column;
-  position: relative;
-  background-image: url(../assets/images/mobile/image-hero.jpg);
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
-  z-index: 3;
-}
-.navTop_container__logoMenuHam_wrapper {
-  width: 100%;
-  height: 5rem;
-  display: flex;
   justify-content: space-between;
+  align-items: center;
+  border-radius: 10px;
+  padding: 1.5rem;
+  margin-bottom: 1rem;
+  background-color: hsl(10, 79%, 65%);
 }
-.navTop_container__logoTop {
-  width: 5rem;
-  display: flex;
-  justify-content: left;
-  text-align: left;
-  padding: 0;
-}
-.navTop_container__logoTop img {
-  margin-left: 0;
-}
-.navTop_container__menuContainer {
-  width: 80%;
-  display: flex;
-  padding: 0;
-  position: relative;
-  justify-content: right;
-}
-.navTop_container a {
-  padding: 14px 16px;
-  text-decoration: none;
-  color: hsl(0, 0%, 100%);
-}
-.navTop_container a:hover {
-  color: hsl(0, 0%, 0%);
-  background-color: #ddd;
-}
-.navTop_container__navMenu {
-  width: 80%;
-  height: 20rem;
-  top: -15rem;
-  left: 0;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-around;
-  margin: 0 auto;
-  z-index: 3;
-  position: absolute;
-  transition: transform 0.7s ease;
-}
-.navTop_container__navMenu--visible {
-  transform: translateY(20rem);
-}
-.navTop_container ul {
-  width: 100%;
-  height: 20rem;
-  color: hsl(0, 0%, 100%);
-  list-style: none;
-  display: block;
-}
-.navTop_container li {
-  width: 100%;
+.myBalance__totalGrpTop {
+  width: 6rem;
   height: 3rem;
   display: flex;
+  flex-direction: column;
   justify-content: center;
-  align-items: center;
-  font-family: "Inter", sans-serif;
-  font-weight: 400;
-  font-size: 1rem;
-  line-height: 2;
-  color: hsl(0, 0%, 100%);
-  border: 1px solid hsl(0, 0%, 100%);
-  background-color: hsla(0, 0%, 0%, 0.6);
-  transition: position 4s ease;
+  padding: 0rem;
+  align-items: left;
 }
-.navTop_container li:hover {
-  background-color: hsl(35, 77%, 62%);
-}
-.navTop_container__hamburgerClassIcon {
-  margin-top: 0.7rem;
-  width: 3rem;
-  height: 3rem;
-  display: inline-block;
-  justify-content: center;
-  margin-right: 0.7rem;
-  z-index: 11;
-  cursor: pointer;
-}
-.navTop_container .bar1,
-.navTop_container .bar2,
-.navTop_container .bar3 {
-  width: 35px;
-  height: 5px;
-  background-color: hsl(0, 0%, 0%);
-  margin: 6px auto;
-  transition: 0.4s;
-}
-.navTop_container .change .bar1 {
-  transform: translate(0, 11px) rotate(-45deg);
-}
-.navTop_container .change .bar2 {
-  opacity: 0;
-}
-.navTop_container .change .bar3 {
-  transform: translate(0, -11px) rotate(45deg);
-}
-
-.gridContainer {
-  flex: 1 0 auto;
-  width: 100%;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  padding: 1rem;
-  z-index: 1;
-  position: relative;
-}
-
-.heroImagePlusIntro {
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-}
-.heroImagePlusIntro__webImage {
-  width: 100%;
-  height: 20rem;
-  z-index: 1;
-  background-image: url(../assets/images/image-web-3-mobile.jpg);
-  background-size: cover;
-  margin-bottom: 2rem;
-}
-.heroImagePlusIntro__intro {
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  margin-bottom: 2rem;
-}
-.heroImagePlusIntro__mainTitle {
-  width: 100%;
-  display: flex;
-  margin-bottom: 1rem;
-}
-.heroImagePlusIntro__mainTitle h1 {
-  font-family: "Inter", sans-serif;
-  font-weight: 900;
-  font-size: 2rem;
-  line-height: 1.2;
-  color: hsl(0, 0%, 0%);
-}
-.heroImagePlusIntro__textContent {
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-}
-.heroImagePlusIntro__textContent p {
-  font-family: "Inter", sans-serif;
-  font-weight: 300;
-  font-size: 1rem;
-  line-height: 1.5;
-  color: hsl(0, 0%, 0%);
-  margin-bottom: 2rem;
-}
-.heroImagePlusIntro__readMore {
-  width: 9rem;
-  height: 2.5rem;
-  align-items: center;
-  letter-spacing: 0.2rem;
-  padding-left: 0.5rem;
-  padding-top: 0.2rem;
-  cursor: pointer;
-  border-radius: 5px;
-  border-style: none;
-  text-align: center;
+.myBalance__miniTitleTop {
   font-family: "Inter", sans-serif;
   font-weight: 600;
-  font-size: 1rem;
+  font-size: 0.8rem;
   line-height: 1.5;
-  color: hsl(0, 0%, 0%);
-  transition: transform 0.7s ease;
-  background-color: hsl(5, 85%, 63%);
+  color: hsl(33, 100%, 98%);
 }
-.heroImagePlusIntro__readMore:hover, .heroImagePlusIntro__readMore:focus {
-  color: hsl(0, 0%, 100%);
-  border-radius: 5px;
-  transform: scale(1.1);
-  border: 3px solid;
-}
-
-.newContainer {
-  width: 100%;
-  height: 30rem;
-  display: flex;
-  flex-direction: column;
-  text-align: center;
-  padding: 2rem;
-  margin-bottom: 2rem;
-  background-color: hsl(0, 0%, 0%);
-}
-.newContainer__newTitle {
+.myBalance__totalTop {
   font-family: "Inter", sans-serif;
-  font-weight: 600;
-  font-size: 2rem;
-  line-height: 1.5;
-  color: hsl(35, 77%, 62%);
-  margin-bottom: 1rem;
-}
-.newContainer__newItem {
-  margin-bottom: 2rem;
-}
-.newContainer h3 {
-  font-family: "Inter", sans-serif;
-  font-weight: 600;
-  font-size: 1.5rem;
-  line-height: 1.5;
-  color: hsl(0, 0%, 100%);
-}
-.newContainer p {
-  font-family: "Inter", sans-serif;
-  font-weight: 400;
-  font-size: 1rem;
-  line-height: 1.5;
-  color: hsl(233, 8%, 79%);
-}
-.newContainer hr {
-  border: 1px solid hsl(233, 8%, 79%);
-  margin-bottom: 1rem;
-}
-
-.bottomRow_Container {
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: space-between;
-}
-
-.rowItem {
-  width: 25rem;
-  display: flex;
-  justify-content: space-between;
-  margin-bottom: 2rem;
-  padding-top: 0;
-}
-.rowItem__image {
-  width: 50%;
-  margin-right: 1rem;
-}
-.rowItem__rightSide {
-  width: 65%;
-}
-.rowItem__number {
-  width: 100%;
-  font-family: "Inter", sans-serif;
-  font-weight: 800;
-  font-size: 1.5rem;
-  line-height: 1.5;
-  color: hsl(5, 85%, 63%);
-}
-.rowItem__title {
-  width: 100%;
-  font-family: "Inter", sans-serif;
-  font-weight: 800;
+  font-weight: 700;
   font-size: 1.2rem;
   line-height: 1.5;
+  color: hsl(0, 0%, 100%);
+}
+.myBalance__circles {
+  width: 4rem;
+  height: 3rem;
+  display: flex;
+  justify-content: right;
+  position: relative;
+  align-items: center;
+}
+.myBalance__whiteCircle {
+  width: 2rem;
+  height: 2rem;
+  margin-right: 1rem;
+  z-index: 2;
+  border-radius: 50%;
+  position: absolute;
+  border: 3px solid hsl(0, 0%, 100%);
+}
+.myBalance__blackCircle {
+  width: 2rem;
+  height: 2rem;
+  z-index: 1;
+  border-radius: 50%;
+  background-color: hsl(0, 0%, 0%);
+}
+
+.spending {
+  width: 100%;
+  height: 24rem;
+  display: flex;
+  flex-direction: column;
+  border-radius: 10px;
+  padding: 1.5rem;
+  margin-bottom: 2rem;
+  background-color: hsl(0, 0%, 100%);
+}
+.spending__title {
+  font-family: "Inter", sans-serif;
+  font-weight: 600;
+  font-size: 1.3rem;
+  line-height: 1.5;
+  color: hsl(0, 0%, 0%);
+  margin-bottom: 2rem;
+}
+
+.bars {
+  width: 100%;
+  height: 11rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-end;
+  margin-bottom: 1rem;
+}
+
+.barGrp {
+  width: 2rem;
+  height: 12rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  position: relative;
+  align-items: center;
+}
+.barGrp:hover .amount, .barGrp:focus-within .amount {
+  opacity: 1; /* Show amount on bar hover or focus */
+}
+
+.bar {
+  width: 2rem;
+  height: 0; /* Start from 0 height */
+  display: flex;
+  border-radius: 4px;
+  position: relative;
+  background-color: hsl(10, 79%, 65%);
+  transition: height 1.5s ease; /* Transition for height */
+}
+.bar:hover, .bar:focus {
+  border-radius: 5px;
+  background-color: hsl(186, 34%, 60%);
+}
+
+.amount {
+  width: 4rem;
+  height: 2.5rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 5px;
+  opacity: 0;
+  z-index: 2;
+  margin-bottom: 2px;
+  font-family: "Inter", sans-serif;
+  font-weight: 500;
+  font-size: 0.8rem;
+  line-height: 1.5;
+  color: hsl(0, 0%, 100%);
+  background-color: hsl(0, 0%, 0%);
+  transition: opacity 1s ease;
+}
+
+.day {
+  font-family: "Inter", sans-serif;
+  font-weight: 500;
+  font-size: 0.8rem;
+  line-height: 1.5;
   color: hsl(0, 0%, 0%);
 }
-.rowItem__text {
+
+hr {
+  border: 1px solid hsl(28, 10%, 53%);
+  margin-bottom: 1rem;
+}
+
+.bottomRow {
   width: 100%;
+  height: 4rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-end;
+}
+.bottomRow__totalGrpBottom {
+  width: 6rem;
+  height: 3rem;
+}
+.bottomRow__miniTitleBottom {
   font-family: "Inter", sans-serif;
   font-weight: 400;
-  font-size: 1rem;
+  font-size: 0.7rem;
+  line-height: 1.2;
+}
+.bottomRow__totalBottom {
+  font-family: "Inter", sans-serif;
+  font-weight: 700;
+  font-size: 1.8rem;
   line-height: 1.5;
-  color: hsl(236, 13%, 42%);
+}
+.bottomRow__percentage {
+  font-family: "Inter", sans-serif;
+  font-weight: 700;
+  font-size: 1rem;
+  line-height: 1;
+  color: hsl(0, 0%, 0%);
+}
+.bottomRow__month {
+  font-family: "Inter", sans-serif;
+  font-weight: 700;
+  font-size: 0.7rem;
+  line-height: 1;
+  color: hsl(28, 10%, 53%);
 }
 
 .attribution {
@@ -336,67 +250,6 @@ header {
 .attribution a {
   color: hsl(0, 0%, 0%);
   text-decoration: none;
-}
-
-@media (min-width: 1024px) {
-  .navTop_container {
-    max-width: 85rem;
-    margin: 0 auto;
-  }
-  .navTop_container__navMenu {
-    width: 30rem;
-    top: 0.5rem;
-    position: relative;
-    margin-right: 0.7rem;
-  }
-  .navTop_container ul {
-    display: flex;
-    justify-content: space-between;
-  }
-  .navTop_container li {
-    border: none;
-    font-family: "Inter", sans-serif;
-    font-weight: 400;
-    font-size: 1rem;
-    line-height: 2;
-    color: hsl(0, 0%, 0%);
-    background-color: transparent;
-  }
-  .navTop_container__hamburgerClassIcon {
-    display: none;
-  }
-  .gridContainer {
-    max-width: 85rem;
-    display: grid;
-    justify-content: center;
-    align-content: flex-start;
-    margin: 0 auto;
-    grid-template-columns: repeat(3fr);
-    grid-template-rows: repeat(4fr);
-    grid-template-areas: "heroeImage heroImage new" "heroeImage heroImage new" "title textContent new" "base base base";
-  }
-  .heroImagePlusIntro__webImage {
-    grid-area: heroImage;
-  }
-  .newContainer {
-    grid-area: new;
-  }
-  .heroImagePlusIntro__intro {
-    flex-direction: row;
-    margin-bottom: 2rem;
-  }
-  .heroImagePlusIntro__mainTitle {
-    width: 90%;
-    grid-area: title;
-    margin-right: 1rem;
-  }
-  .heroImagePlusIntro__textContent {
-    grid-area: textContent;
-  }
-  .bottomRow_Container {
-    flex-direction: row;
-    grid-area: base;
-  }
 }
 
 /*# sourceMappingURL=styles.css.map */
