--- a/css/styles.css
+++ b/css/styles.css
@@ -41,7 +41,7 @@ main {
 }
 
 .card {
-  width: 20rem;
+  width: 24rem;
   height: 27rem;
   display: flex;
   flex-direction: column;
@@ -62,13 +62,21 @@ main {
   background-color: hsl(10, 79%, 65%);
 }
 .myBalance__totalGrpTop {
-  width: 6rem;
+  width: 7rem;
   height: 3rem;
   display: flex;
   flex-direction: column;
   justify-content: center;
+  align-items: center;
   padding: 0rem;
   align-items: left;
+}
+.myBalance__monthTotalTop {
+  font-family: "Inter", sans-serif;
+  font-weight: 700;
+  font-size: 1.2rem;
+  line-height: 1.5;
+  color: hsl(0, 0%, 100%);
 }
 .myBalance__miniTitleTop {
   font-family: "Inter", sans-serif;
@@ -85,7 +93,7 @@ main {
   color: hsl(0, 0%, 100%);
 }
 .myBalance__circles {
-  width: 4rem;
+  width: 3rem;
   height: 3rem;
   display: flex;
   justify-content: right;
@@ -204,7 +212,7 @@ hr {
   align-items: flex-end;
 }
 .bottomRow__totalGrpBottom {
-  width: 6rem;
+  width: 8rem;
   height: 3rem;
 }
 .bottomRow__miniTitleBottom {
